tests/snapshots/examples_fixtures/type_system__failing__43_main_unhandled_custom_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/43_main_unhandled_custom_effect.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E406]: UNHANDLED ROOT EFFECT

`fn main` has undischarged effects: Console.

  --> examples/type_system/failing/43_main_unhandled_custom_effect.flx:11:32
   |
11 | fn main() -> Unit with Console {
   |                                ^
12 |     log("x");
   | ^^^^^^^^^^^^^
13 | }
   | ^

Hint:
  Handle these effects explicitly with `... handle Effect { ... }` before returning from `main`.
== stdout ==
<not executed>
